--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ otp_release:
 services:
   - postgresql
 before_script:
+  - "cd apps/quest_api && mix do deps.get, deps.compile"
+  - "cd apps/quest_admin && mix do deps.get, deps.compile"
+  - "cd apps/quest_web && mix do deps.get, deps.compile"
   - mix ecto.create
   - mix ecto.migrate
